--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
     <link rel="stylesheet" href="./css/plugins/animate.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <style>
-
-    </style>
-    <style>
-
-
-    </style>
 </head>
 <body >
 <div class="container">
-
+    <button class="btn-get-all-cookie">get cookie</button>
+    <button class="btn-set-cookie">set cookie</button>
 </div>
 
 <script src="./js/plugins/sweetalert2.js"></script>
